feature: autodetect GitLab project ID via GitLab API
Attempt to infer project ID from git remote using the token configured in plugin settings.
- Use GitLab API to resolve project path or search project list when needed.
- Fall back to asking user when project  id detection fails.

Implements #8